# growing-neural-gas

./: CMakeLists.txt  README.md
src/: main.cpp
src/Graph/: Graph.cpp  Graph.h  Node.h
src/Image/: Image.cpp  Image.h
